--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "rails-bower-gulp-react",
-  "version": "1.0.0",
-  "description": "== README",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "engines": {
+    "node": "0.10.33",
+    "npm": "2.7.1"
   },
-  "author": "",
-  "license": "ISC"
+  "private": true
 }
